Fix background color of last selected page entry in configforms.
When the last page on a config form page is selected, the background of
the selected item had a border radius that was too large. This change
fixes it up to use a border radius to fit correctly (the border radius
of the outer container minus the width of the border itself).

Testing Done:
Selected the last page in a configform set and saw that the TOC entry
looked correct.

Reviewed at https://reviews.reviewboard.org/r/13979/

--- a/djblets/static/djblets/css/config-forms.less
+++ b/djblets/static/djblets/css/config-forms.less
@@ -559,7 +559,6 @@
  */
 .djblets-c-config-forms-page-nav__item {
   @_page-vars: #djblets-ns-config-forms.page();
-  @_border-radius: @_page-vars[@box-border-radius];
 
   border-bottom:
     1px
@@ -571,7 +570,10 @@
     border-bottom: 0;
 
     &.-is-active, &:hover {
-      border-radius: 0 0 @_border-radius @_border-radius;
+      border-radius:
+        0 0
+        var(--ink-u-border-radius-s-inner)
+        var(--ink-u-border-radius-s-inner);
     }
   }
 
